packages/typ/tests/fixtures/diagnostics/0113_core_tuple_annotation_mismatch_10.ml
let kappa : int * bool = (true, 9)
